--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>ArcGIS JS API Dojo Build Sample</title>
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
     <meta name='viewport' content='initial-scale=1.0 maximum-scale=1.0'>
-    <link rel="stylesheet" href="esri/css/main.css">
+    <link rel="stylesheet" href="../node_modules/arcgis-js-api/css/main.css">
     <style>
       html, body, #map {
         height: 100%;
@@ -53,27 +53,32 @@
     <script>
       // set up your dojoConfig
       window.dojoConfig = {
-        baseUrl: '.',
+        baseUrl: '../node_modules/',
         //deps: ['app/main'],
         packages: [
-          'app',
           'dijit',
           'dojo',
           'dojox',
-          'dstore',
           'dgrid',
-          'esri',
+          'moment',
           {
-            name: 'moment',
-            location: 'moment',
-            main: 'moment'
+            name: 'app',
+            location: '../src/app'
+          },
+          {
+            name: 'dstore',
+            location: 'dojo-dstore'
+          },
+          {
+            name: 'esri',
+            location: 'arcgis-js-api'
           }
         ]
       };
     </script>
 
     <!-- Can use Dojo loader directly -->
-    <script src="dojo/dojo.js"></script>
+    <script src="../node_modules/dojo/dojo.js"></script>
     <script>require(["app/main"]);</script>
 
   </body>
